--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
               }
             ],
             "styles": [
+              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "src/styles.less"
             ],
             "scripts": []
